<resources>
    <string name="app_name">Школьный журнал</string>
    <string name="app_name_eng">School book</string>

    <string name="title_activity_map">Map</string>

    <string name="nav_bar_find">Найти</string>

    <string name="subtitle_find">Найти водителя</string>

    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="phone_number">Номер телефона</string>

    <string name="toRegister"> Зарегистрируйся! Свайп влево! -></string>

    <string name="register_radioStudent">Я - ученик</string>
    <string name="register_radioTeacher">Я - учитель</string>
    <string name="register_radioParent">Я - родитель</string>

    <string name="btn_description_back"><![CDATA[<-]]></string>
    <string name="filterPassword"><![CDATA[`~!@#$%^&*()_-+={}[]\\|:;\"\'<>,.?/ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890]]></string>
    <string name="btn_description_tick">✔</string>
    <string name="btn_description_forward"><![CDATA[->]]></string>

    <string-array name="birthDay">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="birthMonth">
        <item>Января</item>
        <item>Февраля</item>
        <item>Марта</item>
        <item>Апреля</item>
        <item>Мая</item>
        <item>Июня</item>
        <item>Июля</item>
        <item>Августа</item>
        <item>Сентября</item>
        <item>Октября</item>
        <item>Ноября</item>
        <item>Декабря</item>
    </string-array>


    <string-array name="classNumber">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>

    <string-array name="classLetter">
        <item>А</item>
        <item>Б</item>
        <item>В</item>
        <item>Г</item>
        <item>Д</item>
        <item>Ж</item>
        <item>Е</item>
    </string-array>


    <string-array name="subject">
        <item>Все</item>
        <item>Математика</item>
        <item>Русский язык</item>
        <item>Английский язык</item>
        <item>Физика</item>
        <item>География</item>
        <item>Биология</item>
        <item>История</item>
        <item>Информатика</item>
        <item>Химия</item>
        <item>Литература</item>
        <item>Физкультура</item>
        <item>ОБЖ</item>
        <item>ИЗО</item>
        <item>Технология</item>
        <item>Музыка</item>
        <item>Окружающий мир</item>
        <item>Обществознание</item>
        <item>Основы духовной культуры</item>
        <item>Литературное чтение</item>
    </string-array>

</resources>
